src/Components/App/TransitionPage/TransitionPage.scss
.down {
  animation-duration: 2s;
  animation-timing-function: cubic-bezier(0.39, 0.83, 0.61, 0.17);
  animation-name: down;
}

@keyframes down {
  from {
    top: 100vh;
  }
  to {
    top: -100vh;
  }
}

.up {
  animation-duration: 2s;
  animation-timing-function: cubic-bezier(0.39, 0.83, 0.61, 0.17);
  animation-name: up;
}

@keyframes up {
  from {
    top: -100vh;
  }
  to {
  }
  100% {
    top: 100vh;
  }
}

.right {
  animation-duration: 1.75s;
  animation-timing-function: cubic-bezier(0.39, 0.83, 0.61, 0.17);
  animation-name: right;
}

@keyframes right {
  from {
    top: 0vh;
    bottom: 0vh;
    right: -100vw;
  }
  to {
    top: 0vh;
    bottom: 0vh;
    right: 100vw;
  }
}

.left {
  animation-duration: 1.75s;
  animation-timing-function: cubic-bezier(0.39, 0.83, 0.61, 0.17);
  animation-name: left;
}

@keyframes left {
  from {
    top: 0vh;
    bottom: 0vh;
    right: 100vw;
  }
  to {
    top: 0vh;
    bottom: 0vh;
    right: -100vw;
  }
}

